# agentexec

./: CHANGELOG.md  README.md  RELEASE.md  docker-compose.kafka.yml  pyproject.toml
.github/workflows/: ci.yml  npm-publish.yml  test.yml
docker/: README.md  entrypoint.py
docs/: contributing.md  index.md
docs/api-reference/: activity.md  core.md  pipeline.md  runner.md
docs/concepts/: activity-tracking.md  architecture.md  task-lifecycle.md  worker-pool.md
docs/guides/: pipelines.md  (+4 more)
examples/: google_adk_example.py
examples/langchain-agents-fastapi/: README.md  context.py  db.py  main.py  pyproject.toml  tools.py  views.py  worker.py
examples/openai-agents-fastapi/: README.md  main.py  pipeline.py  pyproject.toml  views.py  worker.py
examples/openai-agents-fastapi/frontend/: package.json
examples/openai-agents-fastapi/frontend/src/: App.tsx  index.css
examples/openai-agents-fastapi/frontend/src/components/: Layout.tsx
examples/openai-agents-fastapi/frontend/src/pages/: AgentDetailPage.tsx  AgentListPage.tsx
examples/openai-agents-fastapi/ui/: package.json
research/: multiprocessing.md
tests/: test_activity_schemas.py  test_activity_tracking.py  test_async_activity_tracking.py  test_async_db.py  test_config.py  test_db.py  test_kafka_integration.py  test_pipeline.py  test_pipeline_flow.py  test_public_api.py  test_pydantic_ai_runner.py  test_queue.py  test_queue_partitions.py  test_redis_client.py  test_results.py  test_runners.py  test_schedule.py  test_self_describing_results.py  test_state.py  test_state_backend.py  test_task.py  test_task_locking.py  test_worker_event.py  test_worker_logging.py  test_worker_pool.py  test_worker_resilience.py
ui/: package.json
(+74 files in other folders)
