[project]
name = "langchain-agents-fastapi"
version = "0.1.0"
description = "Example FastAPI application demonstrating agentexec with LangChain"
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }

dependencies = [
    # AgentExec for orchestration
    "agentexec[langchain]>=0.1.0",
    # LangChain for AI agent functionality
    "langchain>=0.3.0",
    "langchain-core>=0.3.0",
    "langchain-openai>=0.2.0",
    "langgraph>=0.2.0",
    # FastAPI and server
    "fastapi>=0.121.0",
    "uvicorn[standard]>=0.27.0",
    # Database migrations
    "alembic>=1.13.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.uv]
dev-dependencies = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "httpx>=0.27.0",  # For testing FastAPI
]
