[project]
name = "openai-agents-fastapi"
version = "0.1.0"
description = "Example FastAPI application demonstrating agentexec with OpenAI Agents SDK"
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }

dependencies = [
    # AgentExec for orchestration
    "agentexec>=0.1.0",
    # OpenAI Agents SDK for AI agent functionality
    "openai-agents>=0.1.0",
    # FastAPI and server
    "fastapi>=0.121.0",
    "uvicorn[standard]>=0.27.0",
    # Database migrations
    "alembic>=1.13.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.uv]
dev-dependencies = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "httpx>=0.27.0",  # For testing FastAPI
]
